# lernza

./: .gitignore  .lintstagedrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_SETUP.md  IMPLEMENTATION_NOTES.md  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY.md  SUPPORT.md  TASK_COMPLETION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TRANSACTION_IMPLEMENTATION_SUMMARY.md  clippy_output.txt  deny.toml  environments.toml  issue.md  org-profile-README.md  package-lock.json  package.json  pr.md  release-please-config.json  tailwind.config.js  upstream_test.rs
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml
.husky/: pre-commit
api/: csp-report.ts
app/: layout.tsx
components/: attendance-chart.tsx  calendar.tsx  dashboard-metrics.tsx  earnings-chart.tsx  footer.tsx  header.tsx  messages.tsx  notice-board.tsx  recent-activity.tsx  sidebar.tsx  student-activity.tsx  students-chart.tsx
contracts/: Deployment.README.md
contracts/testutils/: Cargo.toml
contracts/testutils/src/: lib.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTRACTS_OVERVIEW.md  DEPRECATED_APIS.md  EVENT_REFERENCE.md  INTEGRATION_TESTING.md  LERNZA-AUTOMATION-APP.md  api-reference.md  contract-interaction-diagrams.md  deploy-testnet.md  enrollment-flow.md  events-reference.md  funding-flow.md  milestone-reward-flow.md  quest-card.tsx  quest-creation-flow.md  reward-economics.md  security-audit.md  token-recovery-policy.md
frontend/: .env.example  .lintstagedrc  .prettierignore  .prettierrc  CSP_SECURITY.md  FRAMER_MOTION_AUDIT.md  (+18 more)
(+2299 files in other folders)
