[package]
name = "testutils"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
common = { path = "../common" }
quest = { path = "../quest" }
milestone = { path = "../milestone" }
certificate = { path = "../certificate" }
rewards = { path = "../rewards" }

[features]
default = []